Fixed issue where action icons were collapsed by the table content if larger than window width
Monotone-Parent: c2badd61dcf390ad6adbf145ce938d1a019400ad
Monotone-Revision: 2d23792444ca0f1c6023da2d42d946c4bd71af2e

Monotone-Author: obilodeau@inverse.ca
Monotone-Date: 2011-04-26T16:05:50
Monotone-Branch: org.packetfence.trunk

--- a/pf/html/admin/style.css
+++ b/pf/html/admin/style.css
@@ -245,11 +245,13 @@ td.action {
     line-height: 1em;
     vertical-align: middle;
     width: 70px;
+    min-width: 70px;
 }
 
 /* We have more icons on the action bar there */
 #configuration-violation td.action {
     width: 84px;
+    min-width: 84px;
 }
 
 td.action form {
